# sys-monitor

./: .env.example  Cargo.toml  Makefile
_sqlx/: create_stats.sql  insert_stat.sql
monitor-agent/: Cargo.toml
monitor-agent/src/: main.rs
monitor-central/: Cargo.toml
monitor-central/src/: lib.rs
