[package]
name = "monitor-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-sqs = "0.25.1"
dotenv = "0.15.0"
monitor-central = { path = "../monitor-central" }
serde_json = "1.0.95"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = ["full"] }
