[package]
name = "monitor-central"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-sqs = "0.25.1"
libsql-client = "0.22.5"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
] }
