[package]
name = "monitor-central"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "digestor"
path = "src/bin/digestor.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.70"
aws-config = "0.55.0"
aws-sdk-sqs = "0.25.1"
libsql-client = "0.22.5"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
axum = "0.6.12"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
